article body - region gap fix

--- a/sass/components/_products.scss
+++ b/sass/components/_products.scss
@@ -1,4 +1,6 @@
 .item-products {
+  @include products--horizontal-block();
+
   .item-title {
     @extend %title--content-block;
   }
